--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "creating a real time messaging chat application using Socket.IO",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "socket.io": "^4.8.0",
+    "websockets": "file:"
   }
 }
